2006-01-16  Phil Blundell  <pb@reciva.com>

	* week_view.c (draw_expose_event): Use logical extents, not ink
	extents, from Pango layout.
	(week_view_update): Likewise.

	* day_render.c (show_event): Remove spurious call to
	g_locale_to_utf8().  Replace fixed-size snprintf buffer with call
	to g_strdup_printf.
	(caption_show): Likewise.  Fix 256-byte memory leak.
	(caption_new): Deleted.
	(caption_with_pango_new): Remove argument pl.  Make Pango layout
	construction unconditional.  Rename to caption_new.
	(caption_delete): New function.
	(day_render_delete): Call it.

2006-01-16  Phil Blundell  <pb@reciva.com>

	* day_render.c (found_node, make_set,events_overlap, 
	find_set_in_list, find_set, union_set, find_overlapping_sets,
	show_event, ol_sets_to_rectangles, event_rect_new): Make static.
	(caption_show, caption_set_pango): Guard unused code with #if 0.

	* day_render.h (find_overlapping_sets): Delete prototype.

2006-01-16  Phil Blundell  <pb@reciva.com>

	* day_view.c (scroll_to): Remove mysterious call to
	gtk_adjustment_clamp_page to prevent extraneous redraws.

2006-01-16  Phil Blundell  <pb@reciva.com>

	* day_view.c (day_view_init): Remove unused variable white_gc.
	Unref newly created GC since day_render now takes a reference.
	(reminder_view_expose): Remove useless call to g_slist_length.
	Return without doing anything if rem_render==NULL.
	(reminder_view_update): Only call reminder_view_expose if list of
	events is not empty.
	(reminder_view_init): Remove unused variable white_gc.  Unref
	newly created cream_gc.  Show or hide drawing area depending on
	whether there are any events.
	(day_view_expose): Use static gray_gc rather than creating and
	destroying it on every call.

	* day_popup.c (destroy_popup): Call gtk_grab_remove.
	(button_press_event): New function.
	(day_popup): Install pointer grab on popup window.

	* day_render.c (day_render_new): Take references to GCs.
	(day_render_delete): Drop them.